SERVER-10678 Log a warning but do not throw when unable to determine local address of a socket.